envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: add-x-forwarded-proto-header
spec:
  workloadSelector:
    labels:
      app: your-app-label
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: "envoy.http_connection_manager"
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.append_header
          typed_config:
            "@type": "type.googleapis.com/envoy.extensions.filters.http.append_header.v3.AppendHeader"
            header:
              key: "x-forwarded-proto"
              value: "https"
